add inverse model to documentation

--- a/docs/tutorials/example_usage.ipynb
+++ b/docs/tutorials/example_usage.ipynb
@@ -130,10 +130,107 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03e6e647",
+   "id": "1c1e2788-41db-41fb-b5d4-b7898437df01",
    "metadata": {},
    "source": [
-    "### **2D Heat Conduction**"
+    "### **2D Heat Exchanger**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e99040e-a050-4e31-8678-58f7762c8f75",
+   "metadata": {},
+   "source": [
+    "#### Simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b50c3d62-3807-45aa-80d8-ed3e96cb8561",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from midbench.envs import make"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce8bef46-881c-424e-858e-b646d26797e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Direct to the Environment of 2D heat conduction\n",
+    "Env, Design, Condition = make(\"HeatConduction2d-v0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa6d0516-545a-48e2-b483-46661fb4f6ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boundary condition setup for simulation\n",
+    "conditions = Condition(**{'volume':0.4,'length':0.5,'resolution':50})\n",
+    "\n",
+    "# Design initialization\n",
+    "designs = Design(**{'volume':0.4,'resolution':50}).output()\n",
+    "\n",
+    "# Target performances (e.g., compliance)\n",
+    "performances = ['compliance']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a00529e-daae-4d42-a73c-f4a796a16712",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Execute simulation\n",
+    "compliance=Env.simulate(conditions, designs, performances)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b5a8951-da90-4be1-ae6f-357f1372785e",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daa0c64e-9731-462d-8be2-1a58a921e073",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boundary condition setup for optimization\n",
+    "conditions = Condition(**{'volume':0.4,'length':0.5,'resolution':50})\n",
+    "\n",
+    "# Design initialization\n",
+    "designs = Design(**{'volume':0.4,'resolution':50}).output()\n",
+    "\n",
+    "# Objectives (e.g., compliance)\n",
+    "objectives = ['compliance']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "961b63a4-d30e-4221-90e2-149066a3b3f8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Execute optimization\n",
+    "compliance=Env.optimize(conditions, designs, objectives)"
    ]
   },
   {
